add singleton and prototype scope

--- a/spring-simple/pom.xml
+++ b/spring-simple/pom.xml
@@ -52,5 +52,10 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.lalyos</groupId>
+            <artifactId>jfiglet</artifactId>
+            <version>0.0.8</version>
+        </dependency>
     </dependencies>
 </project>
